[package]
name = "huawei-metrics"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.17.4"
log = "0.4.14"
pretty_env_logger = "0.4.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
clap = "2.33.3"
prometheus = "0.12.0"
regex = "1.5.4"